// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-avatar-group component with name type (1) for valid markup 1`] = `
<gux-avatar-group-beta role="menu">
  <template shadowrootmode="open">
    <slot></slot>
    <gux-avatar-overflow-beta>
      <gux-avatar-overflow-item-beta accent="auto" name="Paul Quinn"></gux-avatar-overflow-item-beta>
      <gux-avatar-overflow-item-beta accent="auto" name="Roisin Smyth"></gux-avatar-overflow-item-beta>
      <gux-avatar-overflow-item-beta accent="auto" name="Thomas U."></gux-avatar-overflow-item-beta>
      <gux-avatar-overflow-item-beta accent="auto" name="Valerie Wall"></gux-avatar-overflow-item-beta>
      <gux-avatar-overflow-item-beta accent="auto" name="Xavier Yarrow"></gux-avatar-overflow-item-beta>
    </gux-avatar-overflow-beta>
  </template>
  <gux-avatar-group-item-beta name="Conor Darcy" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button aria-label="Conor Darcy" class="gux-accent-0 gux-avatar" tabindex="0" type="button">
        <slot name="image">
          <span aria-hidden="true" class="gux-avatar-initials">
            CD
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" placement="top" visual-only="">
          <div slot="content">
            Conor Darcy
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="Elliot Fitzgerald" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button aria-label="Elliot Fitzgerald" class="gux-accent-5 gux-avatar" tabindex="-1" type="button">
        <slot name="image">
          <span aria-hidden="true" class="gux-avatar-initials">
            EF
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" placement="top" visual-only="">
          <div slot="content">
            Elliot Fitzgerald
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="Greg Hayes" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button aria-label="Greg Hayes" class="gux-accent-3 gux-avatar" tabindex="-1" type="button">
        <slot name="image">
          <span aria-hidden="true" class="gux-avatar-initials">
            GH
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" placement="top" visual-only="">
          <div slot="content">
            Greg Hayes
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="Iseult Jones" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button aria-label="Iseult Jones" class="gux-accent-9 gux-avatar" tabindex="-1" type="button">
        <slot name="image">
          <span aria-hidden="true" class="gux-avatar-initials">
            IJ
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" placement="top" visual-only="">
          <div slot="content">
            Iseult Jones
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="John King" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button aria-label="John King" class="gux-accent-8 gux-avatar" tabindex="-1" type="button">
        <slot name="image">
          <span aria-hidden="true" class="gux-avatar-initials">
            JK
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" placement="top" visual-only="">
          <div slot="content">
            John King
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="Larissa Mendez" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button aria-label="Larissa Mendez" class="gux-accent-6 gux-avatar" tabindex="-1" type="button">
        <slot name="image">
          <span aria-hidden="true" class="gux-avatar-initials">
            LM
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" placement="top" visual-only="">
          <div slot="content">
            Larissa Mendez
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="Nancy Omaha" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button aria-label="Nancy Omaha" class="gux-accent-3 gux-avatar" tabindex="-1" type="button">
        <slot name="image">
          <span aria-hidden="true" class="gux-avatar-initials">
            NO
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" placement="top" visual-only="">
          <div slot="content">
            Nancy Omaha
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta hidden="" name="Paul Quinn" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button aria-label="Paul Quinn" class="gux-accent-9 gux-avatar" tabindex="-1" type="button">
        <slot name="image">
          <span aria-hidden="true" class="gux-avatar-initials">
            PQ
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" placement="top" visual-only="">
          <div slot="content">
            Paul Quinn
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta hidden="" name="Roisin Smyth" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button aria-label="Roisin Smyth" class="gux-accent-5 gux-avatar" tabindex="-1" type="button">
        <slot name="image">
          <span aria-hidden="true" class="gux-avatar-initials">
            RS
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" placement="top" visual-only="">
          <div slot="content">
            Roisin Smyth
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta hidden="" name="Thomas U." role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button aria-label="Thomas U." class="gux-accent-3 gux-avatar" tabindex="-1" type="button">
        <slot name="image">
          <span aria-hidden="true" class="gux-avatar-initials">
            TU
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" placement="top" visual-only="">
          <div slot="content">
            Thomas U.
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta hidden="" name="Valerie Wall" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button aria-label="Valerie Wall" class="gux-accent-4 gux-avatar" tabindex="-1" type="button">
        <slot name="image">
          <span aria-hidden="true" class="gux-avatar-initials">
            VW
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" placement="top" visual-only="">
          <div slot="content">
            Valerie Wall
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta hidden="" name="Xavier Yarrow" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button aria-label="Xavier Yarrow" class="gux-accent-3 gux-avatar gux-last-item" tabindex="-1" type="button">
        <slot name="image">
          <span aria-hidden="true" class="gux-avatar-initials">
            XY
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" placement="top" visual-only="">
          <div slot="content">
            Xavier Yarrow
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
</gux-avatar-group-beta>
`;

exports[`gux-avatar-group component with name type (2) for valid markup 1`] = `
<gux-avatar-group-beta role="menu">
  <template shadowrootmode="open">
    <slot></slot>
    <gux-avatar-overflow-beta>
      <gux-avatar-overflow-item-beta accent="auto" name="Paul Quinn"></gux-avatar-overflow-item-beta>
      <gux-avatar-overflow-item-beta accent="auto" name="Roisin Smyth"></gux-avatar-overflow-item-beta>
      <gux-avatar-overflow-item-beta accent="auto" name="Thomas U."></gux-avatar-overflow-item-beta>
      <gux-avatar-overflow-item-beta accent="auto" name="Valerie Wall"></gux-avatar-overflow-item-beta>
      <gux-avatar-overflow-item-beta accent="auto" name="Xavier Yarrow"></gux-avatar-overflow-item-beta>
    </gux-avatar-overflow-beta>
    <gux-avatar-group-add-item-beta class="gux-add-item-overflow" role="menuitem">
      <template shadowrootmode="open" shadowrootdelegatesfocus>
        <button aria-label="Add more items to group" class="gux-avatar" tabindex="-1" type="button">
          <span aria-hidden="true">
            +
          </span>
          <gux-tooltip-beta aria-hidden="true" placement="top" visual-only="">
            <div slot="content">
              Add more items to group
            </div>
          </gux-tooltip-beta>
        </button>
      </template>
    </gux-avatar-group-add-item-beta>
  </template>
  <gux-avatar-group-item-beta name="Conor Darcy" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button aria-label="Conor Darcy" class="gux-accent-0 gux-avatar" tabindex="0" type="button">
        <slot name="image">
          <span aria-hidden="true" class="gux-avatar-initials">
            CD
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" placement="top" visual-only="">
          <div slot="content">
            Conor Darcy
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="Elliot Fitzgerald" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button aria-label="Elliot Fitzgerald" class="gux-accent-5 gux-avatar" tabindex="-1" type="button">
        <slot name="image">
          <span aria-hidden="true" class="gux-avatar-initials">
            EF
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" placement="top" visual-only="">
          <div slot="content">
            Elliot Fitzgerald
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="Greg Hayes" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button aria-label="Greg Hayes" class="gux-accent-3 gux-avatar" tabindex="-1" type="button">
        <slot name="image">
          <span aria-hidden="true" class="gux-avatar-initials">
            GH
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" placement="top" visual-only="">
          <div slot="content">
            Greg Hayes
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="Iseult Jones" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button aria-label="Iseult Jones" class="gux-accent-9 gux-avatar" tabindex="-1" type="button">
        <slot name="image">
          <span aria-hidden="true" class="gux-avatar-initials">
            IJ
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" placement="top" visual-only="">
          <div slot="content">
            Iseult Jones
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="John King" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button aria-label="John King" class="gux-accent-8 gux-avatar" tabindex="-1" type="button">
        <slot name="image">
          <span aria-hidden="true" class="gux-avatar-initials">
            JK
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" placement="top" visual-only="">
          <div slot="content">
            John King
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="Larissa Mendez" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button aria-label="Larissa Mendez" class="gux-accent-6 gux-avatar" tabindex="-1" type="button">
        <slot name="image">
          <span aria-hidden="true" class="gux-avatar-initials">
            LM
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" placement="top" visual-only="">
          <div slot="content">
            Larissa Mendez
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="Nancy Omaha" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button aria-label="Nancy Omaha" class="gux-accent-3 gux-avatar" tabindex="-1" type="button">
        <slot name="image">
          <span aria-hidden="true" class="gux-avatar-initials">
            NO
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" placement="top" visual-only="">
          <div slot="content">
            Nancy Omaha
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta hidden="" name="Paul Quinn" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button aria-label="Paul Quinn" class="gux-accent-9 gux-avatar" tabindex="-1" type="button">
        <slot name="image">
          <span aria-hidden="true" class="gux-avatar-initials">
            PQ
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" placement="top" visual-only="">
          <div slot="content">
            Paul Quinn
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta hidden="" name="Roisin Smyth" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button aria-label="Roisin Smyth" class="gux-accent-5 gux-avatar" tabindex="-1" type="button">
        <slot name="image">
          <span aria-hidden="true" class="gux-avatar-initials">
            RS
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" placement="top" visual-only="">
          <div slot="content">
            Roisin Smyth
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta hidden="" name="Thomas U." role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button aria-label="Thomas U." class="gux-accent-3 gux-avatar" tabindex="-1" type="button">
        <slot name="image">
          <span aria-hidden="true" class="gux-avatar-initials">
            TU
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" placement="top" visual-only="">
          <div slot="content">
            Thomas U.
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta hidden="" name="Valerie Wall" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button aria-label="Valerie Wall" class="gux-accent-4 gux-avatar" tabindex="-1" type="button">
        <slot name="image">
          <span aria-hidden="true" class="gux-avatar-initials">
            VW
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" placement="top" visual-only="">
          <div slot="content">
            Valerie Wall
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta hidden="" name="Xavier Yarrow" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button aria-label="Xavier Yarrow" class="gux-accent-3 gux-avatar" tabindex="-1" type="button">
        <slot name="image">
          <span aria-hidden="true" class="gux-avatar-initials">
            XY
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" placement="top" visual-only="">
          <div slot="content">
            Xavier Yarrow
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-add-item-beta hidden="" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button aria-label="Add more items to group" class="gux-avatar" tabindex="-1" type="button">
        <span aria-hidden="true">
          +
        </span>
        <gux-tooltip-beta aria-hidden="true" placement="top" visual-only="">
          <div slot="content">
            Add more items to group
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-add-item-beta>
</gux-avatar-group-beta>
`;
